# chromatic-cli

./: .env.template  .gitignore  README.md  pyproject.toml
chromatic_cli/: __init__.py  cli.py  clip.py  config.py  db.py  dendrogram.py  index.py  layout.py  models.py  utils.py  write.py
chromatic_cli/surya/: settings.py
chromatic_cli/surya/common/: s3.py
chromatic_cli/surya/layout/: slicer.py
chromatic_cli/surya/recognition/: cache.py
chromatic_cli/surya/table_rec/model/: encoder.py
datasets/: labels.csv
pycli/: __init__.py  chromatic_api.py  clip.py  db.py  group.py  index.py
pycli/surya/common/adetr/: decoder.py
